<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">on-boarding-ui</string>
    <string name="add_projects">Add Project</string>
    <string name="no_active_projects">No Active Projects now, if you want to add project click here.</string>

    <string name="active_projects">Active Projects</string>
    <string name="completed_projects">Completed Projects</string>
    <string name="all_patterns">All Patterns</string>
    <string name="offline_patterns">Offline Patterns</string>
    <string name="my_folders">My Folders</string>
    <string name="connectivity">Connectivity</string>
    <string name="ble_wifi_connectivity">This app needs Bluetooth and WiFi connectivity.</string>
    <string name="later">Later</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="skips">Skip</string>
    <string name="ditto_connect">Ditto projector is not connected</string>
    <string name="bluetooth_wifi">Check your Bluetooth and WiFi Connectivity.</string>
    <string name="error_text">Please try again connecting your device \nagain to ditto projector.</string>
    <string name="ble_connectivity">Turn on your bluetooth</string>
    <string name="wifi_connectivity" tools:ignore="ExtraTranslation">Turn on your WiFi</string>
    <string name="turnon">TURN ON</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stay_tuned_">Stay tuned to browse more patterns that inspire you to start your next journey!</string>
    <string name="welcomemessage">What would you like to do today?</string>
    <string name="page_coming">My Library Will be available Soon!</string>
    <string name="no_completed">No Completed Project</string>
    <string name="no_pattern">No Patterns Available</string>

    <string name="unknown_device">Unknown device</string>
    <string name="desc">Learn to sew a quilted pillow with the Simplicity Pattern 8823 Learn-to-Sew Quilted Pillow.how to apply batting.</string>

    <string name="setup_calibration_title">Have you calibrated your setup?</string>
    <string name="setup_calibration_message">Quick check or calibrate again</string>
    <string name="setup_calibration_calibrate">CALIBRATE</string>
    <string name="setup_calibration_quickcheck">QUICK CHECK</string>
    <string name="setup_quickcheck_title">Do you see the edges lined up to projection?</string>
    <string name="setup_quickcheck_message">Place a sheet of letter sized paper on the projection and check if the lines are coinciding</string>
    <string name="calibrate">NO, CALIBRATE</string>
    <string name="yes_string">YES</string>


    <string name="menu_remove">Remove</string>
    <string name="menu_complete">Mark Complete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_details">Details</string>
    <string name="text_sync">Sync</string>
    <string name="text_search">Search</string>
    <string name="filter">Filter</string>
    <string name="text_filter">Filters</string>
    <string name="text_new">New</string>
    <string name="text_clear_filter"><u>clear filters</u></string>
    <string name="text_filter_result">Showing filtered results\u0020(%1$s)
    </string>Confirm setup and make sure red lighted rectangle is still within the white cutting mat border
    <string name="filters">Filters</string>
    <string name="apply">APPLY</string>
    <string name="clear_all"><u>clear all</u></string>
    <string name="launch_camera">CONTINUE</string>
    <string name="pattern_instructions">Pattern Instructions</string>
    <string name="yardage_notion">Yardage &amp; Notions</string>
    <string name="yardage">Yardage Details</string>
    <string name="notion">Notion Details</string>
    <string name="pattern_details">Pattern Details</string>
    <string name="pattern_library_count">Pattern Library\u0020(%1$d)</string>
    <string name="myfolder_detail_count">%1$s\u0020(%2$d)</string>
    <string name="size_text"> Size : %1$s </string>
    <string name="modified_text"> Modified : %1$s </string>
    <string name="myfolder">My Folders</string>
    <string name="rename_folder">Rename Folder</string>
    <string name="delete_folder">Delete Folder</string>
    <string name="addfolder">Add Folder</string>
    <string name="owned">Owned</string>
    <string name="cancel_search">Cancel</string>
    <string name="addto">Add to folder</string>
    <string name="folder_name">Folder name</string>
    <string name="new_folder">New folder</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this folder ?</string>
    <string name="create_folder">CREATE FOLDER</string>
    <string name="rename_folder_dialog">RENAME FOLDER</string>
    <string name="defult_filter_text">Showing filtered results</string>
    <string name="prompt">null</string>
    <string name="no_cust">No Customization</string>
    <string name="please_selecte_mannequinid">Please select any customization to continue !</string>
    <string name="yardage_and_notion_not_available">No yardage or notions available to display !</string>
    <string name="yardage_notions">YARDAGE / NOTIONS</string>
    <string name="please_select_viewcup_size">Please select View / Cup size and Size to continue !</string>
    <string name="please_select_size">Please select any Size to continue!</string>
    <string name="please_select_size_popup">"Please select any View / Cup size to continue !"</string>


</resources>
