<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_remove"
        android:orderInCategory="1"
        android:title="@string/menu_remove"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_complete"
        android:orderInCategory="2"
        android:title="@string/menu_complete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_rename"
        android:orderInCategory="3"
        android:title="@string/menu_rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_details"
        android:orderInCategory="4"
        android:title="@string/menu_details"
        app:showAsAction="ifRoom" />
</menu>