<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ditto.mylibrary.ui.PatternDescriptionViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/yardage_appBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_yardage"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/headerbar"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:menu="@null"
                app:theme="@style/ToolBarStyle"
                app:titleTextColor="@color/black">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/header_view_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/avenir_next_lt_pro_medium"
                        android:gravity="start"
                        android:text="@string/yardage_notion"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/size_21dp" />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginTop="?attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/start_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/end_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".95" />

                <TextView
                    android:id="@+id/yardage_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/avenir_next_lt_pro_medium"
                    android:gravity="start"
                    android:text="@string/yardage"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_21dp"
                    app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/yardage_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/avenir_next_lt_pro_medium"
                    android:gravity="start"
                    android:text="@string/yardage"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_16px"
                    app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/yardage_title" />

                <TextView
                    android:id="@+id/notion_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/avenir_next_lt_pro_medium"
                    android:gravity="start"
                    android:text="@string/notion"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_21dp"
                    app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/yardage_description" />

                <TextView
                    android:id="@+id/notion_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/avenir_next_lt_pro_medium"
                    android:gravity="start"
                    android:text="@string/notion"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_16px"
                    app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/notion_title" />

                <com.github.barteksc.pdfviewer.PDFView
                    android:id="@+id/pdfView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="@{viewModel.isYardagePDFAvailable()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/notion_description" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pdfView" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_yardage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.isYardageAvailable}"
                    app:constraint_referenced_ids="yardage_title,yardage_description" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_notion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{viewModel.isNotionAvailable}"
                    app:constraint_referenced_ids="notion_title,notion_description" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>