<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ditto.mylibrary.ui.MyLibraryViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topbar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".0" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/pattern_library_appBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_5"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toBottomOf="@id/topbar1">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:menu="@null"
                app:theme="@style/ToolBarStyle"
                app:titleTextColor="@color/black">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide_startn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent=".07" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide_endn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent=".98" />


                    <TextView
                        android:id="@+id/header_view_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/avenir_next_it_pro_bold"
                        android:gravity="center"
                        android:text="@string/pattern_library"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/size_pattern_lib_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/header_view_title_pattern_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/margin_start_pattern_liabry_count"
                        android:fontFamily="@font/avenir_next_it_pro_bold"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/size_pattern_lib_text"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/header_view_title"
                        app:layout_constraintLeft_toRightOf="@id/header_view_title"
                        app:layout_constraintTop_toTopOf="@id/header_view_title"
                        tools:text="(11)" />

                    <View
                        android:id="@+id/view_vertical"
                        android:layout_width="2dp"
                        android:layout_height="@dimen/size_pattern_lib_text"
                        android:layout_marginStart="@dimen/margin_start_vertical_view"
                        android:background="@color/search_text_code"
                        app:layout_constraintBottom_toBottomOf="@id/header_view_title"
                        app:layout_constraintLeft_toRightOf="@id/header_view_title_pattern_count"
                        app:layout_constraintTop_toTopOf="@id/header_view_title" />

                    <TextView
                        android:id="@+id/tv_sync"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/margin_start_search"
                        android:drawableStart="@drawable/ic_sync"
                        android:drawablePadding="@dimen/distance_after_icon_sync"
                        android:fontFamily="@font/avenir_next_lt_pro_demi"
                        android:gravity="center"
                        android:onClick="@{() -> viewModel.onSyncClick()}"
                        android:text="@string/text_sync"
                        android:textColor="@color/search_text_code"
                        android:textSize="@dimen/size_search"
                        app:layout_constraintBottom_toBottomOf="@id/header_view_title_pattern_count"
                        app:layout_constraintLeft_toRightOf="@id/view_vertical"
                        app:layout_constraintTop_toTopOf="@id/header_view_title_pattern_count" />

                    <TextView
                        android:id="@+id/tvSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="@dimen/margin_end_search"
                        android:layout_toLeftOf="@+id/tv_filter"
                        android:drawableStart="@drawable/ic_search"
                        android:drawablePadding="@dimen/distance_after_icon_sync"
                        android:fontFamily="@font/avenir_next_lt_pro_demi"
                        android:gravity="center"
                        android:padding="@dimen/padding_small"
                        android:onClick="@{() -> viewModel.onSearchClick()}"
                        android:text="@string/text_search"
                        android:textColor="@color/search_text_code"
                        android:textSize="@dimen/size_search"
                        app:layout_constraintBottom_toBottomOf="@id/header_view_title"
                        app:layout_constraintRight_toLeftOf="@id/tv_filter"
                        app:layout_constraintTop_toTopOf="@id/header_view_title" />

                    <ImageView
                        android:id="@+id/view_dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_5"
                        android:src="@drawable/ic_filter"
                        android:onClick="@{() -> viewModel.onFilterClick()}"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_filter"
                        app:layout_constraintEnd_toStartOf="@+id/tv_filter"
                        app:layout_constraintTop_toTopOf="@+id/tv_filter" />

                    <TextView
                        android:id="@+id/tv_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="@dimen/margin_card_end"
                        android:fontFamily="@font/avenir_next_lt_pro_demi"
                        android:gravity="center"
                        android:onClick="@{() -> viewModel.onFilterClick()}"
                        android:text="@string/filter"
                        android:textColor="@color/search_text_code"
                        android:textSize="@dimen/size_search"
                        app:layout_constraintBottom_toBottomOf="@id/header_view_title"
                        app:layout_constraintEnd_toStartOf="@id/guide_endn"
                        app:layout_constraintTop_toTopOf="@id/header_view_title" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".10" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top"
            app:tabIndicatorColor="#A4211F"
            app:tabIndicatorGravity="bottom"
            app:tabMode="fixed"
            app:tabMinWidth="100dp"
            app:tabPaddingEnd="@dimen/dimen_0"
            app:tabPaddingStart="@dimen/dimen_0"
            app:tabSelectedTextColor="@color/black"
            app:tabTextAppearance="@style/MineCustomTabText"
            app:tabTextColor="#A8A7A8" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0"
            android:background="@color/white"
            app:layout="@layout/my_library_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>